Add swagger doc info about createAuthenticationTokenHandler
